--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "eslint": "^5.8.0",
     "eslint-config-htmlacademy": "^0.5.2",
     "gulp": "^4.0.0",
+    "gulp-cheerio": "^0.6.3",
     "gulp-csso": "^3.0.1",
     "gulp-htmlmin": "^5.0.1",
     "gulp-imagemin": "^4.1.0",
@@ -17,6 +18,7 @@
     "gulp-plumber": "^1.2.0",
     "gulp-postcss": "8.0.x",
     "gulp-rename": "^1.4.0",
+    "gulp-replace": "^1.0.0",
     "gulp-sass": "^4.0.2",
     "gulp-sourcemaps": "^2.6.4",
     "gulp-svgstore": "^7.0.0",
